Reworked StandardDayPlanSchedulerTest completely